--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "php": "^7.1-dev"
   },
   "autoload": {
-    "psr-0": {
-      "Reduplication\\": "."
+    "psr-4": {
+      "Reduplication\\": "src"
     }
   }
 }
